--- a/profile.css
+++ b/profile.css
@@ -1,51 +1,50 @@
-  /*Profile page*/
-  main{
-    padding-top: 80px;
-  }
-    
-    /* Sidebar styles */
-    .sidebar {
-      height: 100%;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      padding: 20px;
-      background-color: #dee3e5;
-    }
-    
-    .profile {
-      width: 100px;
-      height: 100px;
-      object-fit: cover;
-      border-radius: 50%;
-      margin-bottom: 20px;
-      margin-left: auto;
-      margin-right: auto;
-    }    
-
-.profile-header {
-  margin-top: 10px;
-  padding-top: 10px;
-  background-color: #c5d7eb;
-  ;
+/* Profile page */
+main {
+  padding-top: 80px;
 }
-.profile-header p {
-  font-size: 40px;
+
+/* Sidebar styles */
+.sidebar {
+  height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
+  background-color: #dee3e5;
 }
 
-.profile-info h2 {
-  margin-bottom: 5px;
-}
-.profile-info p{
-  font-size: 20px;
+.profile {
+  width: 100px;
+  height: 100px;
+  object-fit: cover;
+  border-radius: 50%;
+  margin-bottom: 20px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
+.profile-header {
+  display: inline-flexbox;
+  margin-top: 10px;
+  padding-top: 20px;
+  background: linear-gradient(120deg, #c5d7eb 0%, #96a6b9 100%);
+  border-radius: 12px;
+  text-align: center;
+}
+
+.profile-header p {
+  font-size: 32px;
+  margin: 0;
+  color: #333;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4);
+}
+
+.profile-info h2,
 .profile-info h3 {
-  margin-bottom: 5px;
+  margin: 0;
+  font-size: 20px;
+  color: #333;
 }
 
 .Settings {
@@ -58,32 +57,30 @@
 
 /* Uploads styles */
 .uploads-list {
-  padding: 0px;
-  
+  padding-left: 10px;
+  padding-right: 10px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-gap: 20px;
 }
 
 .your-uploads {
-  width: 350px;
-  height: 300px;
+  width: 100%;
+  height: auto;
   border-radius: 12px;
-  box-shadow: 0 4px 7px #fff;
+  box-shadow: 0 4px 7px rgba(0, 0, 0, 0.1);
   overflow: hidden;
   transition: all 0.3s ease-out;
-   
 }
-.your-uploads:hover{
-  box-shadow: 0px 2px 10px rgb(211 219 224); 
-  transform: translateY(-10px); }
 
-.col-md-4 {
-  display: flex;
-  justify-content: center;
+.your-uploads:hover {
+  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.2);
+  transform: translateY(-10px);
 }
 
 .upload-type {
   border-radius: 8px;
   padding: 4px 12px;
-  height: min-content;
   display: inline-block;
   background: var(--pink);
   color: #fff;
@@ -92,37 +89,42 @@
   z-index: 1;
   position: absolute;
   top: 0;
+  left: 0;
 }
 
 .your-uploads img {
   height: 240px;
   width: 100%;
   object-fit: cover;
+  border-top-right-radius: 12px;
+  border-top-left-radius: 12px;
 }
 
 .your-uploads footer {
   display: flex;
-  height: auto;
+  align-items: center;
+  justify-content: space-between;
+  height: 80px;
   background-color: var(--light-sky-blue);
+  padding: 0 10px;
 }
 
 .left {
   flex-basis: 80%;
-  margin-bottom: 10px;
-  padding-left: 8px;
-  padding-bottom: 2px;
 }
-.left h4:hover {
+
+.left h4 {
+  margin: 0;
+  font-size: 16px;
+  color: #333;
   text-decoration: underline;
+  cursor: pointer;
 }
 
 .left p {
   margin: 0;
-  color:var(--deep-blue);
-}
-
-.left p:hover{
-  text-decoration: underline;
+  color: #777;
+  font-size: 14px;
 }
 
 .right {
@@ -132,10 +134,11 @@
 }
 
 .right p {
-  font-size: 14px;
-  color: #555;
   margin: 0;
+  font-size: 14px;
+  color: #777;
 }
+
 .your-uploads .bottom .left {
   display: flex;
   align-items: center;
@@ -145,19 +148,13 @@
   margin-bottom: 5px;
 }
 
-.your-uploads .bottom .left p {
-  font-size: 12px;
-  color: #777;
-}
-
 .your-uploads .bottom .right {
   display: flex;
-  align-items: right;
-
+  align-items: center;
 }
 
 .your-uploads .bottom .right p {
+  margin-left: 5px;
   font-size: 14px;
   color: #777;
-  margin-left: 5px;
 }
