--- a/style.css
+++ b/style.css
@@ -617,7 +617,7 @@ nav a {
   }
 
   .search_bar_mobile {
-    visibility: hidden; 
+    visibility: none; 
     right: 265px;
   } 
 
@@ -633,7 +633,7 @@ nav a {
         font-size: 1.6rem;
         text-transform: uppercase;
         margin-left: 3px;
-        
+        top: 5px;
     }
   
     .home-image-cont .left .left-main-cont header h1{
@@ -659,14 +659,14 @@ nav a {
       margin-bottom: 20px;
     }
     .search_mobile {
-    z-index: 2;
-    position: absolute;
-    /* bottom: 100%; */
-    top: max(90px, 9.5vh);
-    background: var(--light-sky-blue);
-    padding: 8px 16px;
-    border-radius: 0 0 0 12px;
-  }
+      z-index: 2;
+      position: absolute;
+      /* bottom: 100%; */
+      top: max(90px, 9.5vh);
+      background: var(--light-sky-blue);
+      padding: 8px 16px;
+      border-radius: 0 0 0 12px;
+    }
     .search_bar_mobile {
       visibility: visible;
       right: 265px;
