--- a/style.css
+++ b/style.css
@@ -953,6 +953,217 @@ text-decoration: none;
   }
 }
 
+/*subject*/
+.upload_subject{
+  border-radius: 12px;
+  max-width: 60%;
+  background-color: var(--light-sky-blue);
+  display: flex;
+  flex-direction: column;
+  position: center;
+  padding: 0 10px 0 10px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  margin-left: calc(23%);
+  margin-right: calc(23%);
+}
+
+.upload_subject header {
+  font-size: 1.5rem;
+  margin-bottom: 5px;
+  text-align: center;
+  padding: 10px;
+  color: var(--deep-blue);
+}
+
+.upload_subject ul{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 7px;
+  justify-content: space-between;
+  margin-bottom: 20px;
+  padding: 10px;
+}
+
+.upload_subject li{
+  width: 22%;
+  border-radius: 12px;
+  box-shadow: 0 4px 7px #fff;
+  overflow: hidden;
+  transition: all 0.3s ease-out;
+}
+
+.upload_subject li:hover {
+  box-shadow: 0px 2px 10px rgb(211 219 224); 
+  transform: translateY(-10px); 
+} 
+
+.upload_subject img{
+  height: 150px;
+  width: 100%;
+  object-fit: cover;
+}
+
+.upload_subject footer{
+  background: var(--light-sky-blue);  
+}
+
+.upload_subject h2{
+  text-transform: uppercase;
+  font-size: 1.4rem;
+  font-weight: 500;
+  color: var(--deep-blue-2);
+  text-align: center;
+  padding: 5px;
+}
+/*subject*/
+
+/*chapter*/
+.upload_chapter{
+  border-radius: 12px;
+  max-width: 60%;
+  background-color: var(--light-sky-blue);
+  display: flex;
+  flex-direction: column;
+  position: center;
+  padding: 0 10px 0 10px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  margin-left: calc(23%);
+  margin-right: calc(23%);
+
+}
+
+.upload_chapter header {
+  font-size: 1.5rem;
+  text-align: center;
+  padding: 10px;
+  margin-bottom: 5px;
+  color: var(--deep-blue);
+}
+
+.upload_chapter ul{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 7px;
+  justify-content: space-between;
+  margin-bottom: 20px;
+  padding: 10px;
+}
+
+.upload_chapter li{
+  width: 22%;
+  border-radius: 12px;
+  box-shadow: 0 4px 7px #fff;
+  overflow: hidden;
+  transition: all 0.3s ease-out;
+}
+
+.upload_chapter li:hover {
+  box-shadow: 0px 2px 10px rgb(211 219 224); 
+  transform: translateY(-10px); 
+} 
+
+.upload_chapter img{
+  height: 150px;
+  width: 100%;
+  object-fit: cover;
+}
+
+.upload_chapter footer{
+  background: var(--light-sky-blue);  
+}
+
+.upload_chapter h2{
+  text-transform: uppercase;
+  font-size: 1.4rem;
+  font-weight: 500;
+  color: var(--deep-blue-2);
+  text-align: center;
+  padding: 5px;
+}
+/*chapter*/
+
+/*note & class*/
+.post {
+  border-radius: 12px;
+  max-width: 60%;
+  margin: 10px auto;
+  background-color: #f2f2f2;
+  padding: 20px;
+}
+
+.category {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 20px;
+  font-size: 18px;
+  margin-bottom: 10px;
+}
+
+.form-group {
+  margin-bottom: 20px;
+}
+
+.form-control{
+  border-radius: 12px;
+}
+
+.form-control::placeholder {
+  color: #999;
+}
+
+.form-check-input:checked{
+  background-color: var(--sky-blue);
+  border-color: var(--light-sky-blue)
+}
+
+#title .form-control{
+  text-align: center;
+}
+
+#description .form-control {
+  height: 100px;
+  text-align: center;
+}
+
+label {
+  font-weight: bold;
+}
+
+#class-link .form-control {
+  text-align: center;
+}
+
+.input-group-text {
+  height: 38px;
+  
+}
+
+/* Responsive Styles */
+@media only screen and (max-width: 600px) {
+  .upload_subject,
+  .upload_chapter,
+  .post {
+    max-width: 90%;
+    margin-left: 5%;
+    margin-right: 5%;
+  }
+
+  .upload_subject ul,
+  .upload_chapter ul {
+    justify-content: center;
+  }
+
+  .upload_subject li,
+  .upload_chapter li {
+    width: 45%;
+  }
+}
+
 
 
 
@@ -1119,7 +1330,8 @@ margin-top: 35px;
 
 .footer_cont main .right .middle ul {
 display: flex;
-gap: 50px;
+flex-direction: row;
+gap: 25px;
 }
 
 .footer_cont main .right .middle ul li {
@@ -1180,6 +1392,7 @@ height: 30px;
   }
   .footer_cont > main .left{
     width: 100%;
+    padding: 0 0px 0 0px;
   }
   .footer_cont > main .left h2{
     font-size: 2rem;
@@ -1188,33 +1401,49 @@ height: 30px;
   .footer_cont > main .left p{
     font-size: .8rem;
     font-weight: 200;
-    left:80px;
+    
   }
   .footer_cont main .middle{
     width: 100%;
     display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-top: 20px;
     
   }
   .footer_cont > main > .middle h4,
   .footer_cont main .right h4{
     font-size: .9rem;
     margin-top: 10px;
+    font-weight: 200;
   }
+  
+  .footer_cont main .middle ul{
+    gap: 20px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }    
+  
   .footer_cont main .middle ul li a,
   .footer_cont main .right p{
     font-size: .8rem;
+    
+  }
+  .footer_cont main .right .middle ul{
+    align-items: stretch;
     flex-direction: row;
+    gap: 30px;
+    margin-left: 20px;
   }
+  
   .footer_cont main .right .middle h5{
-    width: 200%;
-  }
-  .footer_cont main .middle{
-    flex-wrap: wrap;
+    font-weight: 200;
+    margin-top: 0px;
   }
   .footer_cont main .right{
     top: 10px;
-    display: flex;
-    flex-direction: column;
+    
   }
   .footer_cont main .right .middle img{
     height: 30px;
@@ -1222,24 +1451,6 @@ height: 30px;
   }
   
 }
-
-
-   
-  /* Header Styles */ 
-  /* header { 
-    background-color: #347a32; 
-    padding: 10px; 
-    text-align: center; 
-  } 
-   
-  header h1 { 
-    margin: 0; 
-    font-size: 36px; 
-    color: white; 
-  }  */
-   
- 
- /*news & updates section*/
  
  
   .btn { 
@@ -1268,80 +1479,4 @@ height: 30px;
   } 
    
    
-  /* Footer Styles */ 
-  .footer { 
-    background-color: var(--sky-blue); 
-    padding: 20px; 
-    color: white; 
-    text-align: center; 
-  } 
-   
-  .footer ul { 
-    margin: 0; 
-    padding: 0; 
-    list-style: none; 
-    display: flex; 
-    justify-content: center; 
-    align-items: center; 
-    flex-wrap: wrap; 
-    margin-bottom: 20px; 
-  } 
-   
-  .footer ul li { 
-    margin-right: 15px; 
-  } 
-   
-  .footer ul li:last-child { 
-    margin-right: 0; 
-  } 
-   
-  .footer ul li a { 
-    color: white; 
-    text-decoration: none; 
-    transition: all 0.3s ease-out; 
-  } 
-   
-  .footer ul li a:hover { 
-    color: #347a32; 
-  } 
-   
-  .footer p { 
-    font-size: 14px; 
-    line-height: 1.7; 
-    margin-bottom: 0; 
-  } 
-   
-  .footer a { 
-    color: #c9c9c9; 
-    text-decoration: none; 
-    transition: all 0.3s ease-out; 
-  } 
-   
-  .footer a:hover { 
-    color: #347a32; 
-  } 
-   
-  .footer i { 
-    font-size: 24px; 
-    color: #c9c9c9; 
-    margin-right: 10px; 
-  } 
-   
-  .footer i:hover { 
-    color: #347a32; 
-  } 
-   
-  @media screen and (max-width: 767px) { 
-    .footer ul { 
-      flex-direction: column; 
-    } 
-    .footer li { 
-      margin: 0 0 10px 0; 
-    } 
-    .footer li:last-child { 
-      margin: 0; 
-    } 
-  } 
- .text-center{
-  background-color: #60a6dd;
- }
+  
