--- a/registration.css
+++ b/registration.css
@@ -18,3 +18,13 @@
 .reg__cont {
     top: 3vh;
 }
+
+input {
+    border-radius: 4px !important;
+    outline: none !important;
+}
+
+label {
+    margin-bottom: 5px;
+}
+
